# computer_graphics_course

./: README.md
2D Transformations/src/: notes_11_14.py  task_01_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  tempCodeRunnerFile.py
3D Transformations/src/: mathematical_calculation.py  task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_12.py  task_13.py  task_15.py
3D Transformations/src/engine/animation/: Animation.py
3D Transformations/src/engine/model/: Cube.py
3D Transformations/src/math/: utils_matrix.py
3D Transformations/src/samples/anim/: euler_rotation_extrinsic.py  euler_rotation_intrinsic.py
Euler angles/src/: mathematical_calculation.py  task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py
Euler angles/src/samples/anim/: arbitrary_axis_rotation2.py  arbitrary_transformation.py  cube_quaternion_rotation_01.py
Euler angles/src/samples/book/: image_2_14_cartesian.py
Interactive Rectangle/: CMakeLists.txt
Interactive Rectangle/scr/: main.cpp
OpenGL_learning/: .gitignore  CMakeLists.txt
OpenGL_learning/src/: main.cpp  shader_utils.cpp
Quaternions/src/: main_animation.py  mathematical_calculation.py  task_00.py  task_01.py  task_02.py  task_03.py  task_04.py  task_05.py
Quaternions/src/engine/model/: Model.py
Quaternions/src/samples/anim/: arbitrary_axis_rotation.py  cube_matrix_rotation.py
Quaternions/src/samples/book/: image_2_15_Point_radius_vector.py
Textured Rectangles/: CMakeLists.txt
Textured Rectangles/scr/: main.cpp
Textured Square Animation/: CMakeLists.txt
Textured Square Animation/scr/: main.cpp
